--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "check": "npx @biomejs/biome check"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
