critical-path: task admin form

--- a/biome.json
+++ b/biome.json
@@ -38,6 +38,9 @@
       },
       "suspicious": {
         "noReactSpecificProps": "off"
+      },
+      "a11y": {
+        "useKeyWithClickEvents": "off"
       }
     }
   },
