--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "sweetalert2": "^11.14.5",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
